PROTON-2244: Minor correction to comment text